2004-06-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* man/mod_mono.8.in: 
	* INSTALL: added .webapp sample. MonoApplications is not mandatory.

	* src/mod_mono.c: at least one of MonoApplications,
	MonoApplicationsConfigFile and MonoApplicationsConfigDir is mandatory.

2004-06-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for setenv and putenv.
	* src/mod_mono.c: use putenv when setenv is not available. Fixes build
	problem under Solaris 8.

2004-06-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Released 0.10

2004-05-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* README: updated.

	* src/mod_mono.c: no need to maintain 2 separated lists of commands and
	descriptions for apache 1.3 and 2.0.

2004-05-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: patch from Andrew Arnott that fixes parameters passed
	to mod-mono-server.

2004-05-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NEWS: updated
	* configure.in:
	* man/Makefile.am:
	* man/mod_mono.8.in: updated man page.

	* man/mod_mono.8: Removed.

2004-05-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: support for MonoApplicationsConfigFile and
	MonoApplicationsConfigDir directives by Andrew Arnott.

2004-05-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: patch by Christopher McGinnis
	<christopherm@neopets.com> that adds MonoDocumentRootDir directive which
	maps to --root argument for mod-mono-server.

	* man/mod_mono.8: updated manual page.

	* src/Makefile.am: added -module flag to libtool to fix the PPC install.

2004-04-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NEWS:
	* man/.cvsignore:
	* src/.cvsignore: updated.
	
	* src/Makefile.am:
	* src/mod_mono.c: the default prefix is the one set with --prefix, not
	/usr always.

2004-04-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL: small update on PathInfo.
	* man/mod_mono.8: documented.
